--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,9 +15,10 @@
   "dependencies": {
     "@vueuse/core": "^10.7.1",
     "apexcharts": "^3.45.1",
+    "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
-    "pinia": "^2.1.7",
+    "pinia": "^2.3.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue3-apexcharts": "^1.4.4"
